--- a/client.html
+++ b/client.html
@@ -20,24 +20,19 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      overflow-x: hidden;
     }
 
-    /* Fixed header */
+    /* Top header */
     .mobile-header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
+      border-bottom: none;
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-      z-index: 10;
     }
 
     .header-inner {
@@ -66,13 +61,11 @@
       letter-spacing: 0.5px;
     }
 
-    /* Scrollable main content */
+    /* Main content */
     .main-content {
       flex: 1;
       padding: 1.2rem;
-      margin-top: 70px;   /* height of header */
-      margin-bottom: 100px; /* leave space for bottom nav */
-      overflow-y: auto;
+      margin-bottom: 85px;
     }
 
     .topbar h1 {
@@ -89,7 +82,6 @@
       -webkit-backdrop-filter: blur(12px);
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
-      margin-bottom: 8px;
     }
 
     .content-box:hover {
@@ -100,7 +92,7 @@
     /* Bottom Nav (floating style) */
     nav {
       position: fixed;
-      bottom: 0;
+      bottom: 2px;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
@@ -110,15 +102,14 @@
       border-top-left-radius: 40px;
       border-top-right-radius: 40px;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-between; /* equal gaps */
       align-items: center;
-      padding: 0 1rem;
+      padding: 0 1rem; /* keep some padding on sides */
       box-shadow: 0 8px 24px rgba(0,0,0,0.4);
-      z-index: 10;
     }
 
     nav a {
-      flex: 1;
+      flex: 1;                      /* ⬅ each link takes equal width */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -128,6 +119,7 @@
       font-size: 0.8rem;
       transition: color 0.2s ease, transform 0.2s ease;
     }
+
 
     nav a i {
       font-size: 1.3rem;
@@ -140,6 +132,7 @@
       font-weight: bold;
     }
 
+
     /* Special QR button */
     .qr-nav {
       background: #ffcc66;
@@ -151,13 +144,13 @@
       justify-content: center;
       align-items: center;
 
-      position: absolute;
-      right: 120px;
-      transform: translateX(-50%) translateY(-50%);
-      bottom: 60px; /* middle of nav height */
+      position: absolute;   /* ⬅ instead of relative */
+      left: 83%;            /* push to middle */
+      transform: translateX(-50%) translateY(-25%); /* perfectly centered */
+      bottom: 90px;
+
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       transition: transform 0.25s ease;
-      z-index: 11;
     }
 
     .qr-nav i {
@@ -246,12 +239,6 @@
       <div class="content-box">
         <p>Welcome to UniDrop! This layout is <b>mobile-only</b> with UniDrop branding at the top and navigation at the bottom.</p>
       </div>
-      <div class="content-box">
-        <p>Add more content here to test scrolling. The header and nav will stay fixed while you scroll.</p>
-      </div>
-      <div class="content-box">
-        <p>Even more content to make scrolling visible...</p>
-      </div>
     </section>
   </main>
 
@@ -296,3 +283,6 @@
   </script>
 </body>
 </html>
+
+
+In here, do I make the mobile header and nav not move at all
