--- a/client.html
+++ b/client.html
@@ -24,15 +24,17 @@
 
     /* Top header */
     .mobile-header {
+      position: fixed; /* fixed so it doesn't move */
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
-      border-bottom: none;
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      z-index: 10;
     }
 
     .header-inner {
@@ -64,8 +66,10 @@
     /* Main content */
     .main-content {
       flex: 1;
+      margin-top: 70px; /* height of header */
+      margin-bottom: 90px; /* height of nav */
       padding: 1.2rem;
-      margin-bottom: 85px;
+      overflow-y: auto; /* enable scrolling */
     }
 
     .topbar h1 {
@@ -82,6 +86,7 @@
       -webkit-backdrop-filter: blur(12px);
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
+      margin-bottom: 1rem; /* spacing between boxes */
     }
 
     .content-box:hover {
@@ -92,7 +97,7 @@
     /* Bottom Nav (floating style) */
     nav {
       position: fixed;
-      bottom: 2px;
+      bottom: 0;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
@@ -102,14 +107,15 @@
       border-top-left-radius: 40px;
       border-top-right-radius: 40px;
       display: flex;
-      justify-content: space-between; /* equal gaps */
+      justify-content: space-between;
       align-items: center;
-      padding: 0 1rem; /* keep some padding on sides */
+      padding: 0 1rem;
       box-shadow: 0 8px 24px rgba(0,0,0,0.4);
+      z-index: 10;
     }
 
     nav a {
-      flex: 1;                      /* ⬅ each link takes equal width */
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -119,7 +125,6 @@
       font-size: 0.8rem;
       transition: color 0.2s ease, transform 0.2s ease;
     }
-
 
     nav a i {
       font-size: 1.3rem;
@@ -132,7 +137,6 @@
       font-weight: bold;
     }
 
-
     /* Special QR button */
     .qr-nav {
       background: #ffcc66;
@@ -143,12 +147,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
-      position: absolute;   /* ⬅ instead of relative */
-      left: 83%;            /* push to middle */
-      transform: translateX(-50%) translateY(-25%); /* perfectly centered */
+      position: absolute;
+      left: 50%;
+      transform: translateX(50%) translateY(-25%);
       bottom: 90px;
-
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       transition: transform 0.25s ease;
     }
@@ -215,7 +217,6 @@
       to {transform: scale(1); opacity: 1;}
     }
   </style>
-
 </head>
 <body>
 
@@ -238,6 +239,30 @@
     <section>
       <div class="content-box">
         <p>Welcome to UniDrop! This layout is <b>mobile-only</b> with UniDrop branding at the top and navigation at the bottom.</p>
+      </div>
+      <div class="content-box">
+        <p>Here’s another content box to show spacing and scrolling.</p>
+      </div>
+      <div class="content-box">
+        <p>Scrollable content works while header and nav stay fixed.</p>
+      </div>
+      <div class="content-box">
+        <p>Welcome to UniDrop! This layout is <b>mobile-only</b> with UniDrop branding at the top and navigation at the bottom.</p>
+      </div>
+      <div class="content-box">
+        <p>Here’s another content box to show spacing and scrolling.</p>
+      </div>
+      <div class="content-box">
+        <p>Scrollable content works while header and nav stay fixed.</p>
+      </div>
+      <div class="content-box">
+        <p>Welcome to UniDrop! This layout is <b>mobile-only</b> with UniDrop branding at the top and navigation at the bottom.</p>
+      </div>
+      <div class="content-box">
+        <p>Here’s another content box to show spacing and scrolling.</p>
+      </div>
+      <div class="content-box">
+        <p>Scrollable content works while header and nav stay fixed.</p>
       </div>
     </section>
   </main>
@@ -283,6 +308,3 @@
   </script>
 </body>
 </html>
-
-
-In here, do I make the mobile header and nav not move at all
